migrate getPageContentWithJson to HttpClient API